feat: update main
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>