@@ -71,9 +71,9 @@ class DeleteJakartaDataQueryProviderBetweenTest {
             var values = (ConditionQueryValue) condition.value();
             var conditions = values.get();
             soft.assertThat(conditions).hasSize(1);
-            soft.assertThat(conditions.get(0).name()).isEqualTo("age");
-            soft.assertThat(conditions.get(0).value()).isInstanceOf(ArrayQueryValue.class);
-            soft.assertThat(ArrayQueryValue.class.cast(conditions.get(0).value()).get()).hasSize(2)
+            soft.assertThat(conditions.getFirst().name()).isEqualTo("age");
+            soft.assertThat(conditions.getFirst().value()).isInstanceOf(ArrayQueryValue.class);
+            soft.assertThat(ArrayQueryValue.class.cast(conditions.getFirst().value()).get()).hasSize(2)
                     .contains(NumberQueryValue.of(10), NumberQueryValue.of(20));
 
         });
@@ -96,7 +96,7 @@ class DeleteJakartaDataQueryProviderBetweenTest {
             var conditions = values.get();
             soft.assertThat(conditions).hasSize(2);
 
-            QueryCondition equalsCondition = conditions.get(0);
+            QueryCondition equalsCondition = conditions.getFirst();
             soft.assertThat(equalsCondition.name()).isEqualTo("name");
             soft.assertThat(equalsCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
 
@@ -128,7 +128,7 @@ class DeleteJakartaDataQueryProviderBetweenTest {
             soft.assertThat(equalsCondition.name()).isEqualTo("name");
             soft.assertThat(equalsCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
 
-            QueryCondition betweenCondition = conditions.get(0);
+            QueryCondition betweenCondition = conditions.getFirst();
             soft.assertThat(betweenCondition.condition()).isEqualTo(Condition.BETWEEN);
             soft.assertThat(betweenCondition.value()).isInstanceOf(ArrayQueryValue.class);
             soft.assertThat(ArrayQueryValue.class.cast(betweenCondition.value()).get()).hasSize(2)
@@ -152,7 +152,7 @@ class DeleteJakartaDataQueryProviderBetweenTest {
 
             var values = (ConditionQueryValue) condition.value();
             var conditions = values.get();
-            QueryCondition equalsCondition = conditions.get(0);
+            QueryCondition equalsCondition = conditions.getFirst();
             soft.assertThat(equalsCondition.name()).isEqualTo("name");
             soft.assertThat(equalsCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
 
@@ -183,7 +183,7 @@ class DeleteJakartaDataQueryProviderBetweenTest {
             soft.assertThat(equalsCondition.name()).isEqualTo("name");
             soft.assertThat(equalsCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
 
-            QueryCondition betweenCondition = conditions.get(0);
+            QueryCondition betweenCondition = conditions.getFirst();
             soft.assertThat(betweenCondition.condition()).isEqualTo(Condition.BETWEEN);
             soft.assertThat(betweenCondition.value()).isInstanceOf(ArrayQueryValue.class);
             soft.assertThat(ArrayQueryValue.class.cast(betweenCondition.value()).get()).hasSize(2)
