@@ -97,9 +97,9 @@ class DeleteJakartaDataQueryProviderInTest {
             var values = (ConditionQueryValue) condition.value();
             var conditions = values.get();
             soft.assertThat(conditions).hasSize(1);
-            soft.assertThat(conditions.get(0).name()).isEqualTo("age");
-            soft.assertThat(conditions.get(0).value()).isInstanceOf(ArrayQueryValue.class);
-            soft.assertThat(ArrayQueryValue.class.cast(conditions.get(0).value()).get()).hasSize(2)
+            soft.assertThat(conditions.getFirst().name()).isEqualTo("age");
+            soft.assertThat(conditions.getFirst().value()).isInstanceOf(ArrayQueryValue.class);
+            soft.assertThat(ArrayQueryValue.class.cast(conditions.getFirst().value()).get()).hasSize(2)
                     .contains(NumberQueryValue.of(10), NumberQueryValue.of(20));
 
         });
@@ -122,7 +122,7 @@ class DeleteJakartaDataQueryProviderInTest {
             var conditions = values.get();
             soft.assertThat(conditions).hasSize(2);
 
-            QueryCondition equalsCondition = conditions.get(0);
+            QueryCondition equalsCondition = conditions.getFirst();
             soft.assertThat(equalsCondition.name()).isEqualTo("name");
             soft.assertThat(equalsCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
 
@@ -154,7 +154,7 @@ class DeleteJakartaDataQueryProviderInTest {
             soft.assertThat(equalsCondition.name()).isEqualTo("name");
             soft.assertThat(equalsCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
 
-            QueryCondition betweenCondition = conditions.get(0);
+            QueryCondition betweenCondition = conditions.getFirst();
             soft.assertThat(betweenCondition.condition()).isEqualTo(Condition.IN);
             soft.assertThat(betweenCondition.value()).isInstanceOf(ArrayQueryValue.class);
             soft.assertThat(ArrayQueryValue.class.cast(betweenCondition.value()).get()).hasSize(2)
@@ -178,7 +178,7 @@ class DeleteJakartaDataQueryProviderInTest {
 
             var values = (ConditionQueryValue) condition.value();
             var conditions = values.get();
-            QueryCondition equalsCondition = conditions.get(0);
+            QueryCondition equalsCondition = conditions.getFirst();
             soft.assertThat(equalsCondition.name()).isEqualTo("name");
             soft.assertThat(equalsCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
 
@@ -209,7 +209,7 @@ class DeleteJakartaDataQueryProviderInTest {
             soft.assertThat(equalsCondition.name()).isEqualTo("name");
             soft.assertThat(equalsCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
 
-            QueryCondition betweenCondition = conditions.get(0);
+            QueryCondition betweenCondition = conditions.getFirst();
             soft.assertThat(betweenCondition.condition()).isEqualTo(Condition.IN);
             soft.assertThat(betweenCondition.value()).isInstanceOf(ArrayQueryValue.class);
             soft.assertThat(ArrayQueryValue.class.cast(betweenCondition.value()).get()).hasSize(2)
