@@ -47,7 +47,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -69,7 +69,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("salary");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10.15));
@@ -91,7 +91,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
@@ -113,7 +113,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
@@ -135,7 +135,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(DefaultQueryValue.of("name"));
@@ -157,7 +157,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(DefaultQueryValue.of("?1"));
@@ -179,7 +179,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("active");
             soft.assertThat(queryCondition.value()).isEqualTo(BooleanQueryValue.TRUE);
@@ -201,7 +201,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("active");
             soft.assertThat(queryCondition.value()).isEqualTo(BooleanQueryValue.FALSE);
@@ -223,7 +223,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.LESSER_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -245,7 +245,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.GREATER_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -267,7 +267,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.LESSER_EQUALS_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -289,7 +289,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.GREATER_EQUALS_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
