@@ -427,7 +427,7 @@ class SelectJakartaDataQueryProviderTest {
             var condition = where.condition();
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.name()).isEqualTo("hexadecimal");
             soft.assertThat(queryCondition.value()).isEqualTo(NullQueryValue.INSTANCE);
             soft.assertThat(selectQuery.isCount()).isFalse();
@@ -493,7 +493,7 @@ class SelectJakartaDataQueryProviderTest {
             var condition = where.condition();
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
             soft.assertThat(selectQuery.isCount()).isFalse();
@@ -515,9 +515,9 @@ class SelectJakartaDataQueryProviderTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.AND);
 
             var conditions = (ConditionQueryValue) condition.value();
-            var negation = (ConditionQueryValue)conditions.get().get(0).value();
+            var negation = (ConditionQueryValue)conditions.get().getFirst().value();
 
-            var queryCondition = negation.get().get(0);
+            var queryCondition = negation.get().getFirst();
             soft.assertThat(queryCondition.name()).isEqualTo("hexadecimal");
             soft.assertThat(queryCondition.value()).isEqualTo(StringQueryValue.of(" ORDER BY isn''t a keyword when inside a literal"));
             var in = conditions.get().get(1);
@@ -603,7 +603,7 @@ class SelectJakartaDataQueryProviderTest {
             var condition = where.condition();
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             var notCondition = (ConditionQueryValue) condition.value();
-            QueryCondition queryCondition = notCondition.get().get(0);
+            QueryCondition queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.name()).isEqualTo("employeeName");
             soft.assertThat(queryCondition.value()).isEqualTo(StringQueryValue.of("employeeName"));
         });
@@ -623,7 +623,7 @@ class SelectJakartaDataQueryProviderTest {
             var condition = where.condition();
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             var notCondition = (ConditionQueryValue) condition.value();
-            QueryCondition queryCondition = notCondition.get().get(0);
+            QueryCondition queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.LIKE);
             soft.assertThat(queryCondition.name()).isEqualTo("employeeName");
             soft.assertThat(queryCondition.value()).isEqualTo(DefaultQueryValue.of("?1"));
@@ -645,7 +645,7 @@ class SelectJakartaDataQueryProviderTest {
             var condition = where.condition();
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             var notCondition = (ConditionQueryValue) condition.value();
-            QueryCondition queryCondition = notCondition.get().get(0);
+            QueryCondition queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.LIKE);
             soft.assertThat(queryCondition.name()).isEqualTo("employeeName");
             soft.assertThat(queryCondition.value()).isEqualTo(DefaultQueryValue.of(":employeeName"));
