@@ -365,7 +365,7 @@ class SelectMethodQueryProviderTest {
         QueryCondition condition = where.get().condition();
         QueryValue<?> value = condition.value();
         assertEquals(Condition.NOT, condition.condition());
-        QueryCondition notCondition = ConditionQueryValue.class.cast(value).get().get(0);
+        QueryCondition notCondition = ConditionQueryValue.class.cast(value).get().getFirst();
         assertEquals(Condition.BETWEEN, notCondition.condition());
 
         QueryValue<?>[] values = MethodArrayValue.class.cast(notCondition.value()).get();
@@ -458,7 +458,7 @@ class SelectMethodQueryProviderTest {
         Assertions.assertEquals(Condition.EQUALS, condition.condition());
         assertEquals("salary.currency", condition.name());
 
-        final Sort sort = selectQuery.orderBy().get(0);
+        final Sort sort = selectQuery.orderBy().getFirst();
         Assertions.assertEquals("salary.value", sort.property());
     }
 
@@ -526,7 +526,7 @@ class SelectMethodQueryProviderTest {
 
         assertEquals("_NOT", condition.name());
         assertTrue(value instanceof ConditionQueryValue);
-        QueryCondition condition1 = ConditionQueryValue.class.cast(value).get().get(0);
+        QueryCondition condition1 = ConditionQueryValue.class.cast(value).get().getFirst();
 
         assertEquals("name", condition1.name());
         assertEquals(Condition.EQUALS, condition1.condition());
@@ -596,7 +596,7 @@ class SelectMethodQueryProviderTest {
         List<Sort<?>> sorts = selectQuery.orderBy();
 
         assertEquals(2, sorts.size());
-        Sort<?> sort = sorts.get(0);
+        Sort<?> sort = sorts.getFirst();
         assertEquals("name", sort.property());
         assertEquals(direction, sort.isAscending() ? Direction.ASC : Direction.DESC);
 
@@ -614,7 +614,7 @@ class SelectMethodQueryProviderTest {
         List<Sort<?>> sorts = selectQuery.orderBy();
 
         assertEquals(1, sorts.size());
-        Sort<?> sort = sorts.get(0);
+        Sort<?> sort = sorts.getFirst();
         assertEquals("name", sort.property());
         assertEquals(type, sort.isAscending() ? Direction.ASC : Direction.DESC);
     }
@@ -669,7 +669,7 @@ class SelectMethodQueryProviderTest {
 
         assertEquals("_NOT", condition.name());
         assertTrue(value instanceof ConditionQueryValue);
-        QueryCondition condition1 = ConditionQueryValue.class.cast(value).get().get(0);
+        QueryCondition condition1 = ConditionQueryValue.class.cast(value).get().getFirst();
         QueryValue<?> param = condition1.value();
         assertEquals(operator, condition1.condition());
         assertTrue(ParamQueryValue.class.cast(param).get().contains(variable));
