@@ -572,11 +572,11 @@ class EntityConverterTest {
             soft.assertThat(result.componentConfigurationKey()).isEqualTo("componentConfigurationKey");
             soft.assertThat(result.relationTypeKey()).isEqualTo("relationTypeKey");
             soft.assertThat(result.availableTransitions()).hasSize(1);
-            soft.assertThat(result.availableTransitions().get(0).targetWorkflowStepKey()).isEqualTo("TEST_WORKFLOW_STEP_KEY");
-            soft.assertThat(result.availableTransitions().get(0).stepTransitionReason()).isEqualTo(REPEAT);
-            soft.assertThat(result.availableTransitions().get(0).mailTemplateKey()).isNull();
-            soft.assertThat(result.availableTransitions().get(0).restrictedRoleGroups()).hasSize(1);
-            soft.assertThat(result.availableTransitions().get(0).restrictedRoleGroups().get(0)).isEqualTo("ADMIN");
+            soft.assertThat(result.availableTransitions().getFirst().targetWorkflowStepKey()).isEqualTo("TEST_WORKFLOW_STEP_KEY");
+            soft.assertThat(result.availableTransitions().getFirst().stepTransitionReason()).isEqualTo(REPEAT);
+            soft.assertThat(result.availableTransitions().getFirst().mailTemplateKey()).isNull();
+            soft.assertThat(result.availableTransitions().getFirst().restrictedRoleGroups()).hasSize(1);
+            soft.assertThat(result.availableTransitions().getFirst().restrictedRoleGroups().getFirst()).isEqualTo("ADMIN");
         });
 
     }
@@ -987,7 +987,7 @@ class EntityConverterTest {
             var programs = entity.find("programs").orElseThrow();
             var elements = programs.get(new TypeReference<List<Element>>() {});
             softly.assertThat(elements).hasSize(1);
-            Element element = elements.get(0);
+            Element element = elements.getFirst();
             softly.assertThat(element.name()).isEqualTo("Renamer");
             var subDocument = element.get(new TypeReference<List<Element>>() {});
             softly.assertThat(subDocument).isNotNull().hasSize(2);
